Add links to webpage to install git.

--- a/tutorial_git/tutorial.ipynb
+++ b/tutorial_git/tutorial.ipynb
@@ -27,7 +27,9 @@
    "metadata": {},
    "source": [
     "# The basics\n",
-    "`git` *is just a piece of software that you can download.*"
+    "`git` *is just a piece of software that you can download.*\n",
+    "\n",
+    "*If you don't already have it, you can get it by following [these instructions](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git).*"
    ]
   },
   {
